Updated weapon display and removed power from Archer